# MEPhI_M1.1_PP

./: Cargo.toml  README.md  build.rs  cpv_gpu.cu
src/: calculations.py  create_process.rs  create_thread.rs  main.rs  my_func.rs  std_thread.rs  wav.rs
