[package]
name = "pp_labs"
version = "0.1.1"
authors = ["Pavel Ars <pro100pavel.ars@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav_io = "0.1.8"
num-integer = "0.1.45"
winapi = { version = "0.3", features = ["processthreadsapi","handleapi","winbase","synchapi","minwinbase","winnt"] }
nix = "0.25.0"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
libc = "0.2.137"
rand = "0.5.5"


#[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }